[tool.poetry]
name = "repl_nix_Gitreverb"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.5"
GitHub-Flask = "^3.2.0"
requests = "^2.31.0"
SQLAlchemy = "^1.4.45"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
